--- a/Integrated/New folder/index.html
+++ b/Integrated/New folder/index.html
@@ -179,7 +179,10 @@
                 <li>Pudding</li>
             </ul>
         </div>
+        
     </div>
+    <div id="selectedTablesd"></div>
+    <div id="chartsd"></div>
 </div>
 
 
